first commit with changing starter styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
   <!-- header section  -->
-  <header class="header"></header>
+  <header class="header">
+
+  </header>
 
   <!-- main contant -->
   <main class="main">
