--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- header section  -->
   <header class="header">
-    <div class="container">
+    <div class="container header__container">
       <div class="header__left">
         <button class="header__toggler" type="button"></button>
         <a class="logo" href="/">
@@ -20,36 +20,20 @@
       </div>
       <form class="header__search-form" action="#" method="GET">
         <input class="header__search-form-input" type="search" name="search" id="search" aria-label="search input"
-          placeholder="search">
-        <button class="header__search-form-button" type="submit"></button>
+          placeholder="Search">
+        <button class="header__search-form-button" type="submit">
+          <img class="header__search-form-button-img" src="/images/search.svg" alt="Search icon" width="20" height="20">
+        </button>
       </form>
       <div class="header__details">
         <button class="header__details-video" type="button">
-          <svg class="header__details-img" width="18" height="12" viewBox="0 0 18 12" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M14 4.5V1C14 0.45 13.55 0 13 0H1C0.45 0 0 0.45 0 1V11C0 11.55 0.45 12 1 12H13C13.55 12 14 11.55 14 11V7.5L18 11.5V0.5L14 4.5ZM11 7H8V10H6V7H3V5H6V2H8V5H11V7Z"
-              fill="#606060" />
-          </svg>
         </button>
         <button class="header__details-tools" type="button">
-          <svg class="header__details-img" width="16" height="16" viewBox="0 0 16 16" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M0 4H4V0H0V4ZM6 16H10V12H6V16ZM0 16H4V12H0V16ZM0 10H4V6H0V10ZM6 10H10V6H6V10ZM12 0V4H16V0H12ZM6 4H10V0H6V4ZM12 10H16V6H12V10ZM12 16H16V12H12V16Z"
-              fill="#606060" />
-          </svg>
         </button>
         <button class="header__details-notification" type="button">
-          <svg class="header__details-img" width="16" height="20" viewBox="0 0 16 20" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M8 20C9.1 20 10 19.1 10 18H6C6 19.1 6.9 20 8 20ZM14 14V9C14 5.93 12.36 3.36 9.5 2.68V2C9.5 1.17 8.83 0.5 8 0.5C7.17 0.5 6.5 1.17 6.5 2V2.68C3.63 3.36 2 5.92 2 9V14L0 16V17H16V16L14 14Z"
-              fill="#606060" />
-          </svg>
         </button>
         <button class="header__details-avatar" type="button">
-          <img class="header__details-img" src="/images/avatar.jpg" alt="Avatar img" width="32" height="32">
+          <img class="header__details-avatar-img" src="/images/avatar.jpg" alt="Avatar img" width="32" height="32">
         </button>
       </div>
     </div>
@@ -58,13 +42,20 @@
   <!-- main contant -->
   <main class="main">
 
-    <!-- intro section  -->
-    <section class="intro"></section>
+
 
   </main>
 
   <!-- footer section -->
   <footer class="footer"></footer>
+  <script>
+    var header = document.querySelector(".header");
+
+    // set megin top on tablet and mobile mode
+    document.body.style.marginTop =
+      document.querySelector(".header").offsetHeight + "px";
+
+  </script>
 </body>
 
 
