change header search form

--- a/index.html
+++ b/index.html
@@ -187,7 +187,17 @@
       </footer>
     </aside>
     <div class="videos">
+      <ul class="videos__list">
+        <li class="videos__list-item video">
+          <div class="video__img-wrapper">
+            <img class="video__img" src="https://picsum.photos/300/180" alt="Rasm " width="300" height="180">
+            <span class="video__time">45:12</span>
+          </div>
+          <div class="video__details">
 
+          </div>
+        </li>
+      </ul>
     </div>
   </main>
 
